<resources>
    <string name="app_name">ZefiroApp</string>
    <string name="pop_topic_neg">Błędne dane!</string>
    <string name="pop_text_neg">Wybrane wifi lub wprowadzone haslo jest nieprawidłowe</string>
    <string name="pop_topic_pos">Wszytko OK!</string>
    <string name="pop_text_pos">Zefiro pomyślnie połączyło się z twoim Wi-Fi</string>
    <string name="proces_dialog_check_topic">Łączenie z Wi-Fi</string>
    <string name="proces_dialog_check_text">Zefiro łączy się z twoją siecą Wi-Fi. Proces może zająć trochę czasu...</string>
    <string name="welcome_topic">Witaj w Zefiro!</string>
    <string name="welcome_message">Jesteś aktualnie w widoku konfiguracyjnym. W następnych krokach zostaniesz
        poproszony o wybranie naszego urządzenia z listy a następnie wybór swojej sieci Wi-Fi oraz wpisania
        hasła. Podczas Konfiguracji konieczne będzie zezwolenie aplikacji na korzystanie z niektórych funkcji
        urządzenia (Bluetooth, Wi-Fi, lokalizacja).
</string>
    <string name="btnSzukajBt">Szukaj</string>
    <string name="wybrane_urzadzenie">Wybrane urzadzenie:</string>
    <string name="btnDalej">Dalej</string>
    <string name="btnZaczynajmy">Zaczynajmy!</string>
    <string name="editTextWifiPassHint">Haslo do Wifi</string>
    <string name="wybrana_siec">Wybrana siec:</string>
    <string name="btnPrzeslij_dane">Przeslij Dane</string>
    <string name="pop_btn_neg">Powrót do Wi-Fi</string>
    <string name="pop_btn_pos">Dalej</string>
    <string name="proces_dialog_bt_connect_text">Łączenie z urządzeniem...</string>
    <string name="proces_dialog_bt_search_text">Wyszukiwanie urządzeń BT...</string>
    <string name="proces_dialog_wifi_search_text">Wyszukiwanie sieci Wi-Fi...</string>

    <string name="tab_text">jeden</string>
    <string name="tab_text1">jeden</string>
    <string name="tab_text2">dwa</string>
    <string name="tab_text3">trzy</string>

    <string name="but_login">Zaloguj się</string>

    <string name="fontFamily">sans-serif-medium</string>
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>