<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mroziu_WelcomeActivity"
    android:background="@color/myAppDarkBg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_topic"
        android:id="@+id/tv_welcome_topic"
        android:textSize="45dp"
        android:textColor="@color/myAccent"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/device"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_welcome_topic"
        android:id="@+id/iv_welcome"/>

    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_welcome"
        android:text="@string/welcome_message"
        android:textSize="18dp"
        android:textColor="@color/myLightText"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:lineSpacingExtra="5dp"/>

    <Button
        android:id="@+id/btn_welcome_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/tv_welcome_message"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mroziu_ripple_effect_button"
        android:text="@string/btnZaczynajmy"/>

</RelativeLayout>