<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mroziu_WifiActivity"
    android:background="@color/myAppDarkBg"
    >

    <Button
        android:id="@+id/BtON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSzukajBt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mroziu_ripple_effect_button"/>



    <RelativeLayout
        android:id="@+id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/BtON"
        android:background="@drawable/mroziu_list_background">

        <TextView
            android:id="@+id/tvWybraneUrzadzenie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/mroziu_text_bg"
            android:text="@string/wybrane_urzadzenie"
            android:textSize="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_below="@id/tvWybraneUrzadzenie" />
    </RelativeLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDalej"
        android:id="@+id/btnSend"
        android:layout_below="@+id/listContainer"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mroziu_ripple_effect_button"/>




</RelativeLayout>